frame/support/test/tests/construct_runtime_ui/pallet_error_too_large.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `system`
  --> tests/construct_runtime_ui/pallet_error_too_large.rs:53:11
   |
53 |         System: system::{Pallet, Call, Storage, Config, Event<T>},
   |                 ^^^^^^ use of undeclared crate or module `system`

error[E0433]: failed to resolve: use of undeclared crate or module `system`
  --> tests/construct_runtime_ui/pallet_error_too_large.rs:47:1
   |
47 | / construct_runtime! {
48 | |     pub enum Runtime where
49 | |         Block = Block,
50 | |         NodeBlock = Block,
...  |
55 | |     }
56 | | }
   | |_^ not found in `system`
   |
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this enum
   |
1  | use frame_system::RawOrigin;
   |

error[E0433]: failed to resolve: use of undeclared crate or module `system`
  --> tests/construct_runtime_ui/pallet_error_too_large.rs:47:1
   |
47 | / construct_runtime! {
48 | |     pub enum Runtime where
49 | |         Block = Block,
50 | |         NodeBlock = Block,
...  |
55 | |     }
56 | | }
   | |_^ not found in `system`
   |
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing one of these items
   |
1  | use crate::pallet::Pallet;
   |
1  | use frame_support_test::Pallet;
   |
1  | use frame_system::Pallet;
   |
1  | use test_pallet::Pallet;
   |

error[E0277]: the trait bound `Runtime: frame_system::Config` is not satisfied
  --> tests/construct_runtime_ui/pallet_error_too_large.rs:45:6
   |
45 | impl pallet::Config for Runtime {}
   |      ^^^^^^^^^^^^^^ the trait `frame_system::Config` is not implemented for `Runtime`
   |
note: required by a bound in `pallet::Config`
  --> tests/construct_runtime_ui/pallet_error_too_large.rs:8:20
   |
8  |     pub trait Config: frame_system::Config {}
   |                       ^^^^^^^^^^^^^^^^^^^^ required by this bound in `pallet::Config`

error[E0080]: evaluation of constant value failed
  --> tests/construct_runtime_ui/pallet_error_too_large.rs:47:1
   |
47 | / construct_runtime! {
48 | |     pub enum Runtime where
49 | |         Block = Block,
50 | |         NodeBlock = Block,
...  |
55 | |     }
56 | | }
   | |_^ attempt to compute `0_usize - 1_usize`, which would overflow
   |
   = note: this error originates in the macro `self::sp_api_hidden_includes_construct_runtime::hidden_include::const_assert` (in Nightly builds, run with -Z macro-backtrace for more info)
